2010-10-01  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gravatar.el: Don't load image.el that XEmacs doesn't provide.
	(gravatar-create-image): New function that's an alias to
	gnus-xmas-create-image, gnus-create-image, or create-image.
	(gravatar-data->image): Use it.

2010-09-30  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-registry.el (gnus-registry-install-nnregistry): New function to
	install the nnregistry refer method.
	(gnus-registry-install-hooks): Use it.
	(gnus-registry-unfollowed-groups): Add nnmairix to the default
	unfollowed groups.

2010-09-30  Jose A. Ortega Ruiz  <jao@gnu.org>  (tiny change)

	* gnus-sum.el (gnus-summary-show-thread): Skip past invisible text when
	expanding threads.

2010-09-30  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* nnir.el: Use the server names without suffixes (bug #7009).

	* nnimap.el (nnimap-open-connection): Reinstate the auto-upgrade from
	unencrypted to STARTTLS, if possible.

2010-09-30  Teemu Likonen  <tlikonen@iki.fi>  (tiny change)

	* message.el (message-ignored-supersedes-headers): Strip Injection-*
	headers before superseding.

2010-09-30  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* nnrss.el (nnrss-use-local): Add documentation.

	* nnimap.el (nnimap-extend-tls-programs): New function.
	(nnimap-open-connection): Use tls.el exclusively, and not starttls.el.
	(nnimap-wait-for-connection): Accept the greeting from the stupid
	output from openssl s_client -starttls, too.

	* tls.el (tls-starttls-switches): New variable.
	(tls-find-starttls-argument): Use it.
	(open-tls-stream): Ditto.

	* netrc.el (netrc-credentials): Return the value of the "default"
	entry.
	(netrc-machine): Ditto.

	* nnimap.el (nnimap-find-article-by-message-id): Really return the
	article number.
	(nnimap-split-fancy): New variable.
	(nnimap-split-incoming-mail): Use it.

	* nntp.el (nntp-server-list-active-group): Document.

	* nnimap.el (nnimap-find-article-by-message-id): Use EXAMINE instead of
	SELECT to get the message-id.
