@@ -1,5 +1,15 @@
 2010-10-01  Katsumi Yamaoka  <yamaoka@jpl.org>
 
+	* lpath.el: Fbing iswitchb-read-buffer for Emacs 22 and XEmacs; bind
+	completion-styles-alist and fbind ido-completing-read for XEmacs.
+
+	* gnus-util.el (gnus-completing-read-function): Exclude
+	gnus-icompleting-read and gnus-ido-completing-read from candidates for
+	XEmacs since iswitchb.el is very old and ido.el is unavailable in
+	XEmacs.
+	(iswitchb-mode, iswitchb-temp-buflist, iswitchb-read-buffer): Silence
+	the byte compiler.
+
 	* gravatar.el: Don't load image.el that XEmacs doesn't provide.
 	(gravatar-create-image): New function that's an alias to
 	gnus-xmas-create-image, gnus-create-image, or create-image.
